# wldbg

./: .gitignore  LICENSE  Makefile.am  README  README.md  TODO  autogen.sh  configure.ac
passes/: Makefile.am  dump.c  example.c  help.c  list.c  resolve.c  resolve.h
src/: Makefile.am  debug.c  getopt.c  getopt.h  interactive-commands.c  interactive.c  list-pass.c  list.c  loop.c  objinfo-pass.c  parse-message.c  passes.c  passes.h  print.c  print.h  resolve-pass.c  resolve.c  resolve.h  sockets.c  sockets.h  util.c  util.h  wldbg-ids-map.c  wldbg-ids-map.h  wldbg-objects-info.h  wldbg-parse-message.h  wldbg-parsed-message.h  wldbg-pass.h  wldbg-private.c  wldbg-private.h  wldbg.c  wldbg.h  wldbg.pc.in
src/interactive/: autocmd.c  breakpoints.c  edit.c  filters.c  info.c  input.c  input.h  interactive-commands.c  interactive-commands.h  interactive.c  interactive.h  objinfo-info.c  pass.c  send.c
src/objinfo/: objinfo-private.c  objinfo-private.h  objinfo.c  objinfo.h  wl_registry-objinfo.c  wl_seat-objinfo.c  wl_shm-objinfo.c  wl_surface-objinfo.c  xdg-objinfo.c
tests/: Makefile.am  map-test.c  parse-message-test.c  util-test.c
wayland/: connection.c  test-helpers.c  test-runner.c  test-runner.h  wayland-private.h
